--- a/index.css
+++ b/index.css
@@ -1,15 +1,20 @@
-
+* {
+    box-sizing: border-box;
+}
 body {
     margin: 0;
     background: #1C1C1C;
 }
 
 .container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    display: block;
     width: 500px;
-    height: 320px;
-    margin: 50px auto 0;
+    margin: 5.125em auto 0;
     background: #1F2937;
-    padding: 50px 40px;
+    padding: 3.125em 2.5em;
     border-radius: 10px;
 }
 
@@ -17,8 +22,7 @@ h1 {
     color: #ffffff;
     font-family: 'Karla', sans-serif;
     font-style: normal;
-    font-size: 40px;
-    line-height: 40px;
+    font-size: 2.5rem;
     margin: 0;
 }
 
@@ -26,14 +30,13 @@ h3 {
     color: #4ADF86;
     font-family: 'Karla', sans-serif;
     font-size: 41px;
-    line-height: 35px;
     margin: 0
 }
 
 p {
     font-family: 'Inter';
     font-style: normal;
-    line-height: 2px;
+    margin-top: 2px;
     color: #D5D4D8;
     font-size: 20px;
     width: 372px;
@@ -54,42 +57,76 @@ button:active {
     transform: translateY(4px);
 }
 
+button, .tooltips {
+    cursor: pointer;
+}
+
 button:hover {
     background: #273549;
     border: 0.5px solid #F3F3F9;
     color: #4ADF86;
 }
 
-/* password-container style */
-.password-field-container {
-    color: #4ADF86;
-    border-top: 1px  solid #2F3E53;
-    margin: 30px 0;
+
+
+.password-container {
     display: flex;
     justify-content: space-between;
-    align-items: start;   
+    margin-top: 3em;
+    gap: 10px;
+    max-width: 450px;
+    
 }
 
-/* password field style */
-.password-field {
-    background: #273549;
-    border-radius: 6px;
-    display: inline-block;
-    padding: 15px 0px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-size: 16px;
-    width: 211px;
+.tooltips {
+    width: 230px;
+    height: 40px;
+    background-color: #273549;
+    padding: .5em;
+    color: #10B981;
+    font-size: 1.25rem;
     text-align: center;
-    color: #55F991;
-    margin: 30px 0;
-    box-shadow: 0px 0px 3px #bbbcc8;
+    font-weight: 400;
+    letter-spacing: 1.5;
+    border-radius: 5px;
+    display: inline-block;
+    position: relative;
 }
 
-.password-field:hover {
-    background: #2b2d42;
-    color: #D5D4D8
+.tooltips .tooltip-txt {
+    visibility: hidden;
+    width: 100%;
+    background-color: #273549;
+    color: #F3F3F9;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 120%;
+    left: 50%;
+    margin-left: -105px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+.tooltips .tooltip-txt::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #273549 transparent transparent transparent;
 }
+  
+.tooltips:hover .tooltip-txt {
+    display: none;
+    visibility: visible;
+    opacity: 1;
+}
+
 
 
 
