--- a/index.css
+++ b/index.css
@@ -4,52 +4,56 @@
 body {
     margin: 0;
     background: #1C1C1C;
+    padding: 0;
+    font-family: 'Andika', sans-serif;
 }
 
 .container {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    display: block;
-    width: 500px;
-    margin: 5.125em auto 0;
     background: #1F2937;
-    padding: 3.125em 2.5em;
-    border-radius: 10px;
+    padding: 3.125em  2.5em 4em;
+    
+    
+    
+}
+
+.text-con {
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
     color: #ffffff;
-    font-family: 'Karla', sans-serif;
-    font-style: normal;
     font-size: 2.5rem;
-    margin: 0;
+    font-weight: 700;
 }
 
-h3 {
+h1 span {
+    display: block;
+    margin-top: -0.4em;
+    font-weight: 700;
     color: #4ADF86;
-    font-family: 'Karla', sans-serif;
-    font-size: 41px;
-    margin: 0
+    font-size: 1.8rem;
+   
 }
 
 p {
-    font-family: 'Inter';
-    font-style: normal;
-    margin-top: 2px;
+    margin-top: -1em;
     color: #D5D4D8;
-    font-size: 20px;
-    width: 372px;
+    font-size: 1.25rem;
+    font-weight: 400;
 }
 
 button {
-    padding: 9px 17px 9px 15px;
+    padding: 1em;
     border: none;
     border-radius: 6px;
-    margin-top: 40px;
+    margin: 2em 0 1.5em;
     color: #F3F3F9;
     background: #10B981;
-    
+    width: 100%;
     text-shadow: 0px 0px 1px #1C1C1C;
 }
 
@@ -71,26 +75,30 @@ button:hover {
 
 .password-container {
     display: flex;
-    justify-content: space-between;
-    margin-top: 3em;
+    flex-direction: column;
+    margin-top: 2em;
     gap: 10px;
-    max-width: 450px;
+    
+    
+    
     
 }
 
 .tooltips {
-    width: 230px;
-    height: 40px;
+    width: 100%;
     background-color: #273549;
-    padding: .5em;
     color: #10B981;
-    font-size: 1.25rem;
     text-align: center;
     font-weight: 400;
     letter-spacing: 1.5;
     border-radius: 5px;
-    display: inline-block;
     position: relative;
+    margin: 1em 0 0;
+    padding: .75em;
+}
+
+.tooltipss {
+    margin-bottom: -1em;
 }
 
 .tooltips .tooltip-txt {
@@ -100,12 +108,10 @@ button:hover {
     color: #F3F3F9;
     text-align: center;
     border-radius: 6px;
-    padding: 5px;
     position: absolute;
-    z-index: 1;
+    left: 0;
     bottom: 120%;
-    left: 50%;
-    margin-left: -103px;
+    padding: .75em;
     opacity: 0;
     transition: opacity 0.3s;
   }
@@ -115,7 +121,6 @@ button:hover {
     position: absolute;
     top: 100%;
     left: 50%;
-    margin-left: -5px;
     border-width: 5px;
     border-style: solid;
     border-color: #273549 transparent transparent transparent;
@@ -125,6 +130,88 @@ button:hover {
     display: none;
     visibility: visible;
     opacity: 1;
+}
+
+footer {
+    text-align:  center;
+    background-color: #273549;
+    padding: 1em;
+    line-height: 1.2;
+}
+
+footer h4 {
+    font-weight: 700;
+    color: #c4c4c4;
+    
+}
+
+footer  p {
+    font-size: .9rem;
+    color: #6a6a6a;
+  
+}
+
+@media (min-width: 786px) {
+
+
+    .container {
+        position: fixed;
+        width: 90%;
+        max-width: 550px;
+        border-radius: 5px;
+        left: 0;
+        top: 0;
+        right: 0;
+        margin: 2em auto;
+        background: #ECFDF5;
+    
+
+        
+    }
+
+    .text-con  {
+        margin-top: -7em;
+    }
+
+    .tooltipss  {
+        margin-bottom: 0;
+    }
+
+
+
+    .password-container{
+        flex-direction: row;
+        margin-top: 7em;
+        gap: 1em;
+        border-top: 1px solid #D5D4D8;
+        padding-top: 1em;
+        
+    }
+
+    h1 {
+
+        margin-top: 4em;
+        color: #2B283A;
+    }
+
+    h1 span {
+        font-size: 2rem;
+    }
+
+    p {
+        color: #6B7280;
+    }
+
+    button {
+        position: absolute;
+        width: 41%;
+        top: 50%;
+        
+    }
+
+    footer {
+        display: none;
+    }
 }
 
 
